crates/apollo-compiler/test_data/diagnostics/0060_root_operation_definition_undefined_operation_type.txt
Error: cannot find type `SomeQuery` in this document
   ╭─[0060_root_operation_definition_undefined_operation_type.graphql:2:5]
   │
 2 │     query: SomeQuery
   │     ────────┬───────  
   │             ╰───────── not found in this scope
───╯

